# Capybara

./: .coveragerc  .gitignore  MANIFEST.in  README.md  README_tw.md  pyproject.toml  pyrightconfig.json  setup.cfg
.github/scripts/: coverage_gate.py  generate_pytest_summary.py
.github/workflows/: ci.yml  cpu-ci.yml  cuda-ci.yml  pull_request.yml  release.yml
.github/workflows/deprecated/: cpu-ci.yml
capybara/: __init__.py  runtime.py
capybara/onnxengine/: __init__.py  engine.py  engine_io_binding.py  metadata.py  tools.py
capybara/structures/: boxes.py  functionals.py  keypoints.py  polygons.py
capybara/utils/: custom_path.py  system_info.py  utils.py
capybara/vision/ipcam/: app.py
capybara/vision/visualization/: draw.py  utils.py
docker/: Dockerfile  build.bash  pr.dockerfile
docs/: onnxengine.md  structure.md  utils.md  vision.md
tests/: test_cpuinfo.py  test_document.py  test_hidden_bugs_regressions.py  test_mixins.py  test_runtime.py  test_torchengine.py
tests/onnxengine/: test_engine_stubbed.py  test_utils_and_metadata.py
tests/onnxruntime/: test_engine.py  test_engine_io_binding.py  test_tools.py
tests/openvinoengine/: test_openvino_engine_stubbed.py
tests/resources/: lena.heic  make_onnx.py  model.onnx  model_dynamic-axes.onnx  model_shape=224x224.onnx
tests/structures/: test_boxes.py  test_functionals.py  test_keypoints.py  test_polygons.py
tests/utils/: test_TextDecoder.py  test_TextEncoder.py  test_custom_path.py  test_custom_tqdm.py  test_download_from_google.py  test_files_utils.py  test_powerdict.py  test_system_info.py  test_time.py  test_utils.py  test_utils_enhanced.py
tests/vision/: test_functional.py  test_geometric.py  test_improc.py  test_improc_extra.py  test_morphology.py
tests/vision/ipcam/: test_camera.py
tests/vision/videotools/: test_video2frames.py  test_video2frames_v2.py
tests/vision/visualization/: test_draw.py  test_vis_utils.py
