[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capybara-docsaid"
dynamic = ["version"]
description = "An Image Processing and Deep Learning Toolkit."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "Apache License 2.0"}
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "dacite",
  "psutil",
  "requests",
  "onnx",
  "colored",
  "numpy",
  "pdf2image",
  "ujson",
  "pyyaml",
  "tqdm",
  "pybase64",
  "PyTurboJPEG",
  "dill",
  "networkx",
  "natsort",
  "flask",
  "shapely",
  "piexif",
  "matplotlib",
  "opencv-python>=4.12.0.88",
  "onnxslim",
  "beautifulsoup4",
  "onnxruntime==1.22.0; platform_system == 'Darwin'",
  "onnxruntime_gpu==1.22.0; platform_system == 'Linux'",
  "pillow-heif"
]

[project.urls]
Homepage = "https://docsaid.org/en/docs/capybara/"
Repository = "https://github.com/DocsaidLab/Capybara"
Issues = "https://github.com/DocsaidLab/Capybara/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["capybara*"]
exclude = ["demo", "tests", "docs", ".github", "docker", "wheelhouse"]

[tool.setuptools.dynamic]
version = { attr = "capybara.__version__" }