[metadata]
name = capybara
version = attr: capybara.__version__
description = Useful python tools.
long_description = file: README.md
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<=3.12
url = https://github.com/DocsaidLab/Capybara.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
install_requires =
    pyheif
    dacite
    psutil
    requests
    onnx
    colored
    numpy<2.0.0
    pdf2image
    ujson
    pyyaml
    tqdm
    pybase64
    PyTurboJPEG
    dill
    networkx
    natsort
    flask
    shapely
    piexif
    matplotlib
    opencv-python
    opencc-python-reimplemented
    onnxruntime==1.20.1;platform_system=='Darwin'
    onnxruntime_gpu==1.20.1;platform_system=='Linux'

[options.packages.find]
exclude =
    docker
    demo
    tests
    benchmarks