[metadata]
name = capybara_docsaid
version = attr: capybara.__version__
description = An Image Processing and Deep Learning Toolkit.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.10,<3.13
url = https://github.com/DocsaidLab/Capybara.git

[options]
packages = find:
include_package_data = True
setup_requires=
    pip
    setuptools
    wheel
install_requires =
    dacite
    psutil
    requests
    onnx
    colored
    numpy
    pdf2image
    ujson
    pyyaml
    tqdm
    pybase64
    PyTurboJPEG
    dill
    networkx
    natsort
    flask
    shapely
    piexif
    matplotlib
    opencv-python>=4.12.0.88
    onnxruntime==1.22.0;platform_system=='Darwin'
    onnxruntime_gpu==1.22.0;platform_system=='Linux'
    onnxsim
    beautifulsoup4
    pillow-heif

[options.packages.find]
exclude =
    docker
    demo
    tests
    benchmarks